--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,3 @@
-@font-face {
-  font-family: 'little city';
-  src: url('./littlecity2000-rvpm-webfont.woff2');
-}
-
 * {
   margin: 0;
   padding: 0;
@@ -14,7 +9,7 @@ body {
 
 #container {
   font-size: large;
-  font-family: 'little city', serif;
+  font-family: 'Little City 2000', serif;
   display: grid;
   grid-template-areas:
     'v pop'
