--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,5 @@
+@import url('stylesheet.css');
+
 * {
   margin: 0;
   padding: 0;
@@ -8,8 +10,6 @@ body {
 }
 
 #container {
-  font-size: large;
-  font-family: 'Little City 2000', serif;
   display: grid;
   grid-template-areas:
     'v pop'
@@ -21,6 +21,8 @@ body {
 }
 
 #viewer {
+  font-size: large;
+  font-family: 'Little City 2000', serif;
   display: inline-grid;
   grid-area: v;
   grid-template-areas:
